--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,16 +1,33 @@
 variables:
   buildConfiguration: 'Release'
 
-steps:
-- script: dotnet build --configuration $(buildConfiguration)
-  displayName: 'dotnet build $(buildConfiguration)'
-- task: DotNetCoreCLI@2
-  inputs:
-    command: 'publish'
-    publishWebProjects: true
-- task: AzureWebApp@1
-  inputs:
-    azureSubscription: 'gab-dotNetSP'
-    appType: 'webAppLinux'
-    appName: 'gab-webapp'
-    package: '$(System.DefaultWorkingDirectory)/**/*.zip'
+stages:
+- stage: Build
+  jobs:
+  - job: Build
+    pool:
+      name: Fazio  # Replace with your self-hosted pool name
+    steps:
+    - script: dotnet build --configuration $(buildConfiguration)
+      displayName: 'dotnet build $(buildConfiguration)'
+    - task: DotNetCoreCLI@2
+      inputs:
+        command: 'publish'
+        publishWebProjects: true
+        arguments: '--output $(Build.ArtifactStagingDirectory) --configuration $(buildConfiguration)'
+        zipAfterPublish: true
+        modifyOutputPath: false
+        outputName: 'drop'
+
+- stage: Deploy
+  jobs:
+  - job: Deploy
+    pool:
+      name: Fazio  # Replace with your self-hosted pool name
+    steps:
+    - task: AzureWebApp@1
+      inputs:
+        azureSubscription: 'WebApplication'
+        appType: 'webAppLinux'
+        appName: 'CalculatordotNet'
+        package: '$(Build.ArtifactStagingDirectory)/**/*.zip'
