--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,7 +6,7 @@ stages:
   jobs:
   - job: Build
     pool:
-      name: Fazio  # Replace with your self-hosted pool name
+      name: <YourSelfHostedPoolName>  # Replace with your self-hosted pool name
     steps:
     - script: dotnet build --configuration $(buildConfiguration)
       displayName: 'dotnet build $(buildConfiguration)'
@@ -18,13 +18,24 @@ stages:
         zipAfterPublish: true
         modifyOutputPath: false
         outputName: 'drop'
+    - task: PublishBuildArtifacts@1
+      inputs:
+        pathtoPublish: '$(Build.ArtifactStagingDirectory)'
+        artifactName: 'drop'
+        publishLocation: 'Container'
 
 - stage: Deploy
   jobs:
   - job: Deploy
     pool:
-      name: Fazio  # Replace with your self-hosted pool name
+      name: <YourSelfHostedPoolName>  # Replace with your self-hosted pool name
     steps:
+    - task: DownloadBuildArtifacts@0
+      inputs:
+        buildType: 'current'
+        downloadType: 'single'
+        artifactName: 'drop'
+        downloadPath: '$(Build.ArtifactStagingDirectory)'
     - task: AzureWebApp@1
       inputs:
         azureSubscription: 'WebApplication'
